# eddy

./: .gitignore  README.md  meson.build
src/: EddyUtils.vala  Package.vala
subprojects/vala-unit/: meson.build
test/: meson.build  test-package.vala
test/package/: compare-versions-test.vala
